[package]
name = "usermode-memoryscanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
winapi = {version = "0.3.9", features = ["winnt", "tlhelp32", "errhandlingapi", "memoryapi", "processthreadsapi", "handleapi", "psapi", "winbase"]}